fix: improve text alignment and update styles for consistency across pages
- Updated comments in the Projects page for clarity and consistency.
- Enhanced layout and styling of the Projects page, including adjustments to padding and positioning for better visual hierarchy.

--- a/src/pages/Projects/style.sass
+++ b/src/pages/Projects/style.sass
@@ -16,20 +16,21 @@
 			&::before
 				content: ""
 				width: 100%
-				height: 2em
-				background-image: linear-gradient(to bottom, #fff , transparent)
+				height: .7em
+				background-image: linear-gradient(to bottom, #fff 50%, transparent)
 				position: absolute
-				bottom: -2em
+				bottom: -.65em
 				left: 0
-				z-index: 1
+				z-index: -1
 		.project-box
 			.title-box
 				&::before
 					content: ""
 					width: 100%
-					height: 4em
-					background-image: linear-gradient(to bottom, #ffffff 70%, transparent)
+					height: .8em
+					bottom: 0
+					transform: translateY(90%)
+					background-image: linear-gradient(to bottom, #ffffff 50%, transparent)
 					position: absolute
-					bottom: -4em
 					left: 0
 					z-index: 1
